--- a/febs-common/febs-common-core/pom.xml
+++ b/febs-common/febs-common-core/pom.xml
@@ -100,5 +100,9 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
