--- a/febs-apm/skywalking-elk/docker-compose.yml
+++ b/febs-apm/skywalking-elk/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   elasticsearch:
-    image: elasticsearch:6.4.1
+    image: elasticsearch:6.8.15
     container_name: elasticsearch
     restart: always
     environment:
@@ -19,7 +19,7 @@ services:
       - 9200:9200
       - 9300:9300
   kibana:
-    image: kibana:6.4.1
+    image: kibana:6.8.15
     container_name: kibana
     links:
       - elasticsearch:es #配置elasticsearch域名为 es
@@ -30,7 +30,7 @@ services:
     ports:
       - 5601:5601
   logstash:
-    image: logstash:6.4.1
+    image: logstash:6.8.15
     container_name: logstash
     volumes:
       - /febs/logstash/logstash-febs.conf:/usr/share/logstash/pipeline/logstash.conf
@@ -41,7 +41,7 @@ services:
     ports:
       - 4560:4560
   skywalking-oap:
-    image: apache/skywalking-oap-server:6.4.0
+    image: apache/skywalking-oap-server:8.5.0-es6
     container_name: skywalking-oap
     depends_on:
       - elasticsearch
@@ -57,7 +57,7 @@ services:
       - /febs/skywalking/config:/apache-skywalking-apm-bin/config:ro
 
   skywalking-ui:
-    image: apache/skywalking-ui:6.4.0
+    image: apache/skywalking-ui:8.5.0
     container_name: skywalking-ui
     depends_on:
       - skywalking-oap
